...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.title),
      ),
      key: const Key('scorable_overview'),
      body: ListView.builder(itemCount: scorables.values.length, itemBuilder: scorableItemBuilder),
      floatingActionButton: FloatingActionButton(
        onPressed: _createNewScorableForm,
        key: const Key('create_new_scorable'),
        tooltip: 'Create new Scorable',
        child: const Icon(Icons.add),
      ),
    );
  }

...
