...
        title: const Text('Create a new game')
      ),
      body: Column(children: [
        Padding(
            padding: const EdgeInsets.all(5.0),
            child: TextFormField(
              key: const ValueKey('scorable_name'),
              autocorrect: false,
              enableSuggestions: false,
              keyboardType: TextInputType.name,
              decoration: const InputDecoration(hintText: 'The name of your game'),
              autofocus: true,
              controller: _nameController..text = 'New Game',
...
            ElevatedButton(
                onPressed: _cancel,
                key: const Key('cancel_create'),
                child: const Padding(padding: EdgeInsets.all(5.0), child: Text('Cancel'))),
            ElevatedButton(
                onPressed: _createGame,
                key: const Key('create_new_game'),
                child: const Padding(padding: EdgeInsets.all(5.0), child: Text('Create'))),
          ],
        )
      ])

    );
...
