...
              )),
          Row(
            mainAxisAlignment: MainAxisAlignment.spaceAround,
            children: [
              ElevatedButton(
                  onPressed: _signInWithEmailAndPassword,
                  key: const Key('sign_in'),
                  child: const Padding(padding: EdgeInsets.all(5.0), child: Text('Sign in'))),
              ElevatedButton(
                  onPressed: _createUserWithEmailAndPassword,
                  key: const Key('sign_up'),
                  child: const Padding(padding: EdgeInsets.all(5.0), child: Text('Sign up'))),
            ],
...
